añadido de imagenes en menu principal

--- a/index.html
+++ b/index.html
@@ -8,13 +8,27 @@
 </head>
 <body>
     <h1 id="principio">¿Como preparar un menú saludable?</h1>
-
+    <hr>
     <ul>
         <li><a href="./recetas/paella/index.html">Paella</a></li>
-        <li><a href="./recetas/pizza/index.html">pescado al horno</a></li>
+            <br>
+            <img src="./img/menu_principal/paella.jpg" alt="imagen representativa de la paella" width="100px">
+            <br>
+            <br>
+
+        <li><a href="./recetas/pescado al horno/index.html">pescado al horno</a></li>
+            <br>
+            <img src="./img/menu_principal/pescado.jpg" alt="imagen representativa de el pescado" width="100px">
+            <br>
+            <br>
+
         <li><a href="./recetas/ensalada/index.html">ensalada</a></li>
+            <br>
+            <img src="./img/menu_principal/ensalada.jpg" alt="imagen representativa de la ensalada" width="100px">
 
     </ul>
+
+    <hr>
     
 </body>
 </html>
