--- a/recetas/paella/index.html
+++ b/recetas/paella/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
 
-    <a href="../../index.html"><img src="../../img/paella/circle-arrow-left-solid.svg" alt="volver al menú" width="2%"></a>
+    <a href="../../index.html"><img src="../../img/paella/arrow-left-solid.svg" alt="volver al menú" width="1.8%"> Volver al menú de inicio</a>
       
-    <h1>Plato 2: Paella Mixta</h1>
+    <h1>Plato 1: Paella Mixta</h1>
 
         <ul>
             <li><a href="#ingredientes">Ingredientes</a></li>
@@ -52,46 +52,70 @@
     <ol>
 
         <li>Cortar el pollo y el magro de cerdo en trozos pequeños y uniformes. Limpiar los calamares y cortarlos en anillas junto con sus tentáculos. Lavar bien los mejillones y reservar los langostinos.</li>
-        <img src="../../img/paella/pollocortado.jpg" alt="cortar el pollo" width="200px">
+        <img src="../../img/paella/pollocortado.jpg" alt="cortar el pollo" width="150px">
         <br>
-        <li>En una paellera amplia, calentar un poco de aceite de oliva a fuego medio-alto. Sellar los trozos de pollo hasta que estén bien dorados por fuera (6-8 minutos). Retirar y reservar. Hacer lo mismo con el magro de cerdo. Reservar junto al pollo.</li>
+        <li>En una paellera amplia, calentar un poco de aceite de oliva a fuego medio-alto. Sellar los trozos de pollo hasta que estén bien dorados por fuera <strong>(6-8 minutos)</strong>. Retirar y reservar. Hacer lo mismo con el magro de cerdo. Reservar junto al pollo.</li>
         <br>
-        <img src="../../img/paella/aceite.jpg" alt="aceite" width="200px">
-        <br>
-        <br>
-        <br>
-        <li>En la misma paellera, dorar ligeramente las anillas de calamar y sus tentáculos durante 2-3 minutos. Añadir los langostinos y los mejillones. Cocinar hasta que los mejillones se abran. Retirar los mariscos y quitar una de las conchas de los mejillones. Reservar.</li>
-        <br>
-        <img src="../../img/paella/calamar.jpg" alt="calamar" width="200px">
+        <img src="../../img/paella/aceite.jpg" alt="aceite" width="150px">
         <br>
         <br>
         <br>
-        <li>Sofreír los ajos picados y el pimiento verde cortado en tiras en la misma paellera. Cuando estén dorados, agregar el tomate rallado y cocinar a fuego medio-bajo durante 5-7 minutos, hasta que se reduzca y espese.</li>
+        <li>En la misma paellera, dorar ligeramente las anillas de calamar y sus tentáculos durante <strong>2-3 minutos</strong>. Añadir los langostinos y los mejillones. Cocinar hasta que los mejillones se abran. Retirar los mariscos y quitar una de las conchas de los mejillones.</li>
+            <br>
+            <img src="../../img/paella/calamar.jpg" alt="calamar" width="150px">
+            <br>
+            <br>
+            <br>
+        <li>Sofreír los ajos picados y el pimiento verde cortado en tiras en la misma paellera. Cuando estén dorados, agregar el tomate rallado y cocinar a fuego medio-bajo durante <strong>5-7 minutos</strong>, hasta que se reduzca y espese.</li>
+            <br>
+            <img src="../../img/paella/ajo.jpg" alt="ajo" width="150px">
+            <br>
+            <br>
+            <br>
+        <li>Incorporar el arroz y rehogar en el sofrito durante <strong>unos minutos</strong>, hasta que el arroz esté nacarado. Añadir de vuelta el pollo, el cerdo y los calamares. Mezclar suavemente para integrar todos los ingredientes.</li>
+            <img src="../../img/paella/arroz.jpg" alt="arroz" width="150px">
+            <br>
+            <br>
+            <br>
+        <li>Tostar ligeramente las hebras de azafrán en una sartén pequeña a fuego muy bajo durante <strong>20-30 segundos</strong>. Disolver el azafrán en un poco del caldo caliente para distribuir mejor su sabor.</li>
+            <br>
+            <img src="../../img/paella/azafran.jpg" alt="azafran" width="150px">
+            <br>
+            <br>
+            <br>
+        <li>Añadir el caldo a la paellera <strong>(3 tazas por cada taza de arroz)</strong>. Llevar a ebullición y cocinar a fuego alto durante <strong>9-10 minutos</strong>, asegurando que el arroz absorba bien el caldo. Bajar el fuego y cocinar otros 7-8 minutos más sin remover el arroz. Sacudir la paellera suavemente de vez en cuando.</li>
+            <br>
+            <img src="../../img/paella/caldo.jpg" alt="Añadir el caldo a la paellera " width="150px">
+            <br>
+            <br>
+            <br>
+        <li>Mientras se cocina el arroz, blanquear las arvejas en agua con sal durante <strong>2 minutos</strong>. Escurrir y reservar.</li>
+            <br>
+            <img src="../../img/paella/arveja.jpg" alt=" arvejas en agua " width="150px">
+            <br>
+            <br>
+            <br>
+        <li>En los últimos <strong>2-3 minutos de cocción</strong>, colocar los langostinos y los mejillones reservados sobre el arroz.</li>
+            <br>
+            <img src="../../img/paella/langostinos-arroz.jpg" alt="langostinos y los mejillones reservados sobre el arroz" width="150px">
+            <br>
+            <br>
+            <br>
+        <li>Cuando la paella esté lista, colocar las arvejas escurridas sobre la superficie. Tapar y dejar reposar durante <strong>5 minutos</strong> para que los sabores se asienten. Servir con rodajas de limón alrededor de la paellera para que cada comensal pueda exprimirlas a su gusto.</li>
         <br>
-        <img src="../../img/paella/ajo.jpg" alt="ajo" width="200px">
-        <br>
-        <br>
-        <br>
-        <li>Incorporar el arroz y rehogar en el sofrito durante unos minutos, hasta que el arroz esté nacarado. Añadir de vuelta el pollo, el cerdo y los calamares. Mezclar suavemente para integrar todos los ingredientes.</li>
-        <img src="../../img/paella/arroz.jpg" alt="arroz" width="200px">
-        <br>
-        <br>
-        <br>
-        <li>Tostar ligeramente las hebras de azafrán en una sartén pequeña a fuego muy bajo durante 20-30 segundos. Disolver el azafrán en un poco del caldo caliente para distribuir mejor su sabor.</li>
-        <br>
-        <li>Añadir el caldo a la paellera (3 tazas por cada taza de arroz). Llevar a ebullición y cocinar a fuego alto durante 9-10 minutos, asegurando que el arroz absorba bien el caldo. Bajar el fuego y cocinar otros 7-8 minutos más sin remover el arroz. Sacudir la paellera suavemente de vez en cuando.</li>
-        <br>
-        <li>Mientras se cocina el arroz, blanquear las arvejas en agua con sal durante 2 minutos. Escurrir y reservar.</li>
-        <br>
-        <li>En los últimos 2-3 minutos de cocción, colocar los langostinos y los mejillones reservados sobre el arroz.</li>
-        <br>
-        <li>Cuando la paella esté lista, colocar las arvejas escurridas sobre la superficie. Tapar y dejar reposar durante 5 minutos para que los sabores se asienten. Servir con rodajas de limón alrededor de la paellera para que cada comensal pueda exprimirlas a su gusto.</li>
+        <img src="../../img/paella/reposar.jpg" alt="dejar reposar sntes de servir" width="150px">
+
 
     </ol>
     <hr>
     <h2 id="final">Resultado Final:</h2>
 
         <img src="../../img/paella/resultado.jpg" alt="imagen del resultado final" width="500px">
+
+    <br>
+    <br>
+
+    <a href="../../index.html">Volver a munú de inicio</a>
 
 </body>
 </html>
