correccion de errores en el validador

--- a/index.html
+++ b/index.html
@@ -10,21 +10,13 @@
     <h1 id="principio">¿Como preparar un menú saludable?</h1>
     <hr>
     <ul>
-        <li><a href="./recetas/paella/index.html">Paella</a></li>
-            <br>
-            <img src="./img/menu_principal/paella.jpg" alt="imagen representativa de la paella" width="100px">
-            <br>
-            <br>
+        <li><a href="./recetas/paella/index.html">Paella</a><br><br><img src="./img/menu_principal/paella.jpg" alt="imagen representativa de la paella" width="100"><br><br></li>
 
-        <li><a href="./recetas/pescado al horno/index.html">pescado al horno</a></li>
-            <br>
-            <img src="./img/menu_principal/pescado.jpg" alt="imagen representativa de el pescado" width="100px">
-            <br>
-            <br>
+        <li><a href="./recetas/pescado_al_horno/index.html">pescado al horno</a><br><br><img src="./img/menu_principal/pescado.jpg" alt="imagen representativa de el pescado" width="100"><br><br></li>
 
-        <li><a href="./recetas/ensalada/index.html">ensalada</a></li>
-            <br>
-            <img src="./img/menu_principal/ensalada.jpg" alt="imagen representativa de la ensalada" width="100px">
+        <li><a href="./recetas/ensalada/index.html">ensalada</a><br><br><img src="./img/menu_principal/ensalada.jpg" alt="imagen representativa de la ensalada" width="100"><br></li>
+
+        
 
     </ul>
 
