cambio de rutas

--- a/recetas/pescado_al_horno/index.html
+++ b/recetas/pescado_al_horno/index.html
@@ -10,7 +10,7 @@
 
     <a href="../../index.html"><img src="../../img/paella/arrow-left-solid.svg" alt="volver al menú" width="30"> Volver al menú de inicio</a>
       
-    <h1>Plato 2: Pescado al horno</h1>
+    <h1 id="indice">Plato 2: Pescado al horno</h1>
 
         <ul>
             <li><a href="#ingredientes">Ingredientes</a></li>
